--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ Distributor dan Retail
         <meta property="og:image:width" content="600"/>
         <meta property="og:locale" content="en_US"/>
         <meta property="og:site_name" content="Linktree"/>
+        <meta name="keywords" content="Happy Hijab, happy hijab offical, happyhijab, happy, hijab" />
         <meta content="2419200"/>
         <meta name="twitter:card" content="summary_large_image"/>
         <meta name="twitter:domain" content="Linktree"/>
